@@ -1,3 +1,8 @@
+2017-01-05  Oliver Kiddle  <opk@zsh.org>
+
+	* 40269: Src/Zle/computil.c, Test/Y03arguments.ztst:
+	handle option exclusion within current word for clumped options
+
 2017-01-04  Oliver Kiddle  <opk@zsh.org>
 
 	* 40227: Src/Zle/computil.c, Test/Y03arguments.ztst: new approach
